--- a/style.css
+++ b/style.css
@@ -92,6 +92,10 @@ header .nav-container .logo-container {
 
 }
 
+iframe{
+    width: 900;
+    height: 520
+}
 canvas{
     margin-top:2%;
     margin-left:5%; 
@@ -110,3 +114,12 @@ footer{
     background:#f2f2f2;
     border-top: 1px solid#e6e6e6;
 }
+
+.center {
+    margin: auto;
+    text-align: center;
+    width: 60%;
+    padding: 10px;
+    font-size: x-small;
+    color: gray
+  }
