--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ box-shadow: 0px 2px 8px 2px lightgray;
 background: rgb(41, 48, 67);
 }
 
+a:link {
+    text-decoration: none;
+  }
+
 header .nav-container{
     display:flex;
     justify-content: flex-end;
